bpo-38256: Fix binascii.crc32 on 4+GiB inputs.

Fixed binascii.crc32 when USE_ZLIB_CRC32 was defined at configure
time. It now computes the correct value on inputs larger than
0xffff_ffff in length. It also releases the GIL around large
computation as zlib.crc32 already did.